# Windows-Develop-Notes

./: .gitignore  README.md  TYPES IN MFC.txt  mfcconsole.cpp
CFile/: 1.txt  CFile.cpp  CFile.h  CFile.rc  CFile.txt  CFile.vcxproj  CFile.vcxproj.filters  CFileDlg.cpp  CFileDlg.h  q.txt  readme.txt  resource.h  stdafx.cpp
Cpp_Assembly/: README.md  const_inline.md  extern_C_and_multi_files_include.md  reference.md
RegEdit/: RegEdit.mak  RegEdit.rc  RegEdit.vcxproj  RegEditDlg.cpp  RegEditDlg.h  StdAfx.cpp  UpgradeLog.htm  resource.h
add/: add.sln  readme.txt
add/add/: add.h  (+10 more)
ch0_4mfc_examples/: README.md
ch10_show_hide_images/: ch10_show_hide_images.aps  ch10_show_hide_images.cpp  ch10_show_hide_images.rc  ch10_show_hide_images.vcxproj  ch10_show_hide_images.vcxproj.filters  resource.h
ch11_chatroom/: README.md
ch12_crash_demos/: 01_veh.cpp  01_veh_实验总结.md  02_seh.cpp  02_seh_实验总结.md  03_uef_minidump.cpp  03_uef_minidump_实验总结.md  04_nullptr.cpp  05_heap_corruption.cpp  05_heap_corruption_实验总结.md  06_stack_overflow.cpp  06_stack_overflow_实验总结.md  07_race_condition.cpp  07_race_condition_实验总结.md  08_uninitialized.cpp  08_uninitialized_实验总结.md  09_dll_load.cpp  09_dll_load_实验总结.md  10_memory_exhaust.cpp  10_memory_exhaust_实验总结.md  11_pure_virtual.cpp  11_pure_virtual_实验总结.md  12_assert.cpp  13_static_init_order_a.cpp  13_static_init_order_b.cpp  13_static_init_order_main.cpp  14_cross_module_dll.cpp  14_cross_module_main.cpp  CMakeLists.txt  README.md  SUMMARY_20260612_会话总结.md  SUMMARY_学习完结_20260701.md  Windows编码与文件格式问题总结.md  运行时库链接方式总结.md
ch1_process/: README.md  windows-programming.sln
ch1_process_api_learn/: create_process.cpp  exit_process.cpp
ch1_process_memory_change/: ch1_process_memory_change.cpp
ch2_thread/: 1_create_thread.cpp  2_exit_thread.cpp  3_priority_demo.cpp  4_critical_section.cpp  5_price_of_lock.cpp  6_thread_async_signal.cpp  README.md
(+198 files in other folders)
